<resources>
    <string name="app_name">Eventually</string>
    <string name="app_login">Iniciar sesión</string>
    <string name="app_label">eventually</string>
    <string name="mail_telf">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="google_sign_in">Iniciar con Google</string>
    <string name="not_registered">¿Aún no eres miembro? Regístrate</string>
    <string name="guest">Continuar como invitado</string>
    <string name="skip">OMITIR</string>
    <string name="retype_pass">Repetir contraseña</string>
    <string name="register">Registrarse</string>
    <string name="already_registered">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="action_settings">Ajustes</string>
    <string name="bu_clubes">Clubes</string>
    <string name="bu_expos">Expos</string>
    <string name="bu_grupo">Grupales</string>
    <string name="bu_festival">Festivales</string>
    <string name="bu_deportes">Deportes</string>
    <string name="bu_cocteles">Cocteles</string>
    <string name="bu_gastronomia">Gastronomia</string>
    <string name="bu_musica">Musica</string>
    <string name="bu_cultura">Cultura</string>
    <string name="bu_moda">Moda</string>
    <string name="bu_playa">Playa</string>
    <string name="bu_cine">Cine</string>
    <string name="text_continue">Finalizar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="tab_text_1">Eventos</string>
    <string name="tab_text_2">Sugerencias</string>
    <string name="tab_text_3">Grupos</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="my_events">Agenda</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="share_friends">Invitar a amigos</string>
    <string name="feedback">Feedback</string>
    <string name="sidebaropen">Open</string>
    <string name="sidebarclosed">Closed</string>
    <string name="guest_first_time">Invitado</string>
    <string name="mail_guest">invitado@invitado.com</string>
    <string name="edit_name">Nombre</string>
    <string name="edit_lastname">Apellido</string>
    <string name="edit_username">Nombre de usuario</string>
    <string name="edit_birthdate">Fecha nacimiento</string>
    <string name="search_events">Buscar eventos</string>
    <string name="search_event_hint">Busca un evento</string>
    <string name="action_log_out">Cerrar sesión</string>
    <string name="action_verification_email">Verificación de correo</string>
    <string name="send_verification_email">Se ha enviado un correo de verificación a tu dirección de correo electrónico, pulsa OK cuando hayas verificado tu cuenta</string>
    <string name="resend_verification_email">No se ha podido enviar el correo de verificación a tu dirección de correo electrónico ¿Quieres que se vuelva a enviar?</string>
    <string name="send_verification_email_if_not_verified">Tu correo electrónico aún no se ha verificado, revisa tu bandeja de entrada o solicita un nuevo envío del correo de verificación</string>
    <string name="logout_confirmation">¿Estás seguro/a de que quieres cerrar sesión?</string>
    <string name="logout_ok">OK</string>
    <string name="logout_cancel">Cancelar</string>
    <string name="verification_send">Volver a enviar</string>
    <string name="verification_send_if_not_verified">Enviar correo</string>
    <string name="my_profile">Mi perfil</string>
    <string name="et_realname">Nombre</string>
    <string name="et_username">Nombre de usuario</string>
    <string name="event_assist">Confirmar asistencia</string>
    <string name="more_button">Mostrar más</string>
    <string name="assistance_cancel">Cancelar asistencia</string>
    <string name="confirmed_assistance_events">Eventos con asistencia confirmada</string>
    <string name="tastes">Gustos</string>
    <string name="follow_text">Seguir</string>
    <string name="title_edit_profile">Editar perfil</string>
    <string name="finish_editting">Finalizar edición</string>
    <string name="feedback_title">¡Te tenemos en cuenta!</string>
    <string name="feedback_description">Puedes dejar tu opinión sobre la aplicación, enviar una sugerencia, notificar un error o formular cualquier duda.</string>
    <string name="short_comment">Escribe un comentario corto</string>
    <string name="button_send_feedback">Enviar</string>
    <string name="cancel_following">Dejar de seguir</string>
    <string name="selected_for_you">Seleccionados para ti</string>
    <string name="upcoming_events">Llegan en breves</string>
    <string name="in_your_favs">En tus favoritos</string>
    <string name="event_old">El evento ha finalizado</string>
    <string name="group_name">Nombre del grupo</string>
    <string name="no_coincidences_title">No tienes coincidencias</string>
    <string name="no_coincidences_text">Necesitas al menos una coincidencia para poder crear un grupo</string>
    <string name="group_creation">Crear grupo</string>
    <string name="participants_details">Participantes</string>
    <string name="leave_group">Dejar grupo</string>
    <string name="delete_group">Eliminar grupo</string>
    <string name="error_try_again">¡Error! Vuelve a intentarlo</string>

    <string-array name="feedback_choices">
        <item>Duda sobre la aplicación</item>
        <item>Bug o error inesperado</item>
        <item>Sugerencia</item>
    </string-array>
</resources>
