<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.evesoftworks.javier_t.eventually.activities.MainPageActivity">

    <group android:id="@+id/mainmenu">
        <item
            android:id="@+id/my_events"
            android:orderInCategory="1"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/my_events"/>

        <item
            android:id="@+id/my_profile"
            android:orderInCategory="2"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/my_profile"/>

        <item
            android:id="@+id/action_settings"
            android:orderInCategory="3"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"
            app:showAsAction="never"/>

        <item
            android:id="@+id/share_friends"
            android:orderInCategory="4"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share_friends" />

        <item
            android:id="@+id/feedback"
            android:title="@string/feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:orderInCategory="5"/>
    </group>

    <group android:id="@+id/logoutmenu">
        <item
            android:id="@+id/log_out"
            android:orderInCategory="6"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out"/>
    </group>
</menu>
