<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.evesoftworks.javier_t.eventually.activities.SignInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/eventually"
        android:id="@+id/image_icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_label"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_size" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_from_title"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/et_name"
            android:layout_gravity="center"
            android:layout_width="@dimen/et_width"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:hint="@string/mail_telf"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="@dimen/et_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/pass"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="@dimen/et_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_from_button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/sign_in"
        android:textColor="@color/textButton" />

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="@dimen/et_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end"
        android:text="@string/not_registered"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/omitir"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end"
        android:text="@string/guest"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />
</LinearLayout>