<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/group_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context=".activities.GroupDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/group_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:translationZ="2dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/group_details_toolbar" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@color/colorPrimary"
            app:layout_collapseMode="parallax" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/group_pic"
                android:layout_width="240dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:elevation="5dp"
                android:focusable="true"
                android:src="@mipmap/default_pic"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/group_name"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:maxLines="1"
                android:maxLength="20"
                android:text="Nombre"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/group_participants_cv"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/group_participants_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/participants_details"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/group_participants_recycle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/group_participants_title"
                    android:layout_marginTop="0dp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/leave_group_button"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:elevation="6dp"
        android:text="@string/leave_group"
        android:textColor="@color/textButton"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/delete_group_button"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:elevation="6dp"
        android:translationZ="4dp"
        android:text="@string/delete_group"
        android:textColor="@color/textButton"/>
</android.support.design.widget.CoordinatorLayout>