<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context="com.evesoftworks.javier_t.eventually.activities.EditProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/edit_profile_toolbar" />
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/primaryButton" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:hintEnabled="true"
        app:layout_anchor="@id/image"
        app:layout_anchorGravity="bottom">

        <EditText
            android:id="@+id/edit_firstname"
            android:layout_width="@dimen/et_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/edit_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:hintEnabled="true"
        app:layout_anchor="@id/textinput1"
        app:layout_anchorGravity="bottom">

        <EditText
            android:id="@+id/edit_lastname"
            android:layout_width="@dimen/et_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/edit_lastname"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:hintEnabled="true"
        app:layout_anchor="@id/textinput2"
        app:layout_anchorGravity="bottom">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="@dimen/et_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/edit_username"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_ok_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="4dp"
        android:src="@drawable/ic_check_white_24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.design.widget.CoordinatorLayout>
