<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context="com.evesoftworks.javier_t.eventually.activities.UserProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:translationZ="2dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/edit_profile_toolbar" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@color/colorPrimary"
            app:layout_collapseMode="parallax" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_my_pic"
                android:layout_width="240dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:src="@mipmap/default_pic"
                app:layout_collapseMode="parallax" />

            <EditText
                android:id="@+id/profile_my_name"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:maxLines="1"
                android:inputType="textNoSuggestions"
                android:maxLength="20"
                android:text="Nombre"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/profile_my_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:maxLines="1"
                android:layout_marginTop="-10dp"
                android:inputType="textNoSuggestions"
                android:maxLength="20"
                android:imeOptions="actionGo"
                android:textColor="@android:color/white"
                android:text="Nombre de usuario"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/profile_my_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-10dp"
                android:backgroundTint="@android:color/transparent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:textSize="12sp"
                android:focusableInTouchMode="false"
                android:text="Email" />
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/favourite"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_favorite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/preferences_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/tastes"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/favourite"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/events_assisting_cv"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/assistance_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/confirmed_assistance_events"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/confirmed_assistance_recycle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/assistance_title"
                    android:layout_marginTop="0dp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/interested_button"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:elevation="6dp"
        android:text="@string/follow_text"
        android:textColor="@color/textButton" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/finish_editing_button"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:elevation="6dp"
        android:translationZ="4dp"
        android:text="@string/finish_editting"
        android:textColor="@color/textButton" />
</android.support.design.widget.CoordinatorLayout>